# NeoSmart

./: .clearml.conf.example  .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  YoloTesting.py  docker-compose.clearml.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
Documentation/: BARRIER_ACCESS_CONTROL.md  CLEARML_SETUP.md  LEGACY_TOOLS.md  PARKING_SPACE_MARKING_TOOL.md  SUSPICIOUS_PARKING_DETECTION.md  TRAFFIC_COUNTING.md  UE5_SETUP_GUIDE.md  WRONG_PARKING_DETECTION.md  ZONE_BASED_DASHBOARD.md
Documentation/cards/: data_card.md  model_card.md
Documentation/eda/: eda_report.md
Documentation/experiments/exp01_baseline/: args.yaml  results.csv
Documentation/experiments/exp02_aug_schedule/: args.yaml  results.csv
Documentation/experiments/exp03_full_stack/: args.yaml  results.csv
Documentation/reports/: experiments_report.md
SmartParking/: requirements-dev.txt  requirements-win.txt  requirements.txt
SmartParking/BarrierSystem/: camera5_barrier.p  camera6_barrier.p  convert_plate_detector_to_tflite.py  mark_barrier_zones.py  test_plate_inference.py
SmartParking/CarParkingSpace/: _deprecated_get_automatic_roi_parking_spaces.py  _deprecated_get_roi_parking_spaces.py  camera1_parkings.p  camera2_parkings.p  camera3_parkings.p  car_counter.py  car_parking_space.py  mark_parking_spaces.py  polygons.p
SmartParking/SuspiciousParking/: sort.py  suspicious_car_detector.py
SmartParking/TrafficCounting/: camera4_crossing.p  mark_crossing_regions.py
SmartParking/WrongParking/: calibrate_perspective.py  camera1_calibration.pkl  camera2_calibration.pkl  wrong_parking_advanced.py  wrong_parking_basic.py
SmartParking/legacy/: _deprecated_get_automatic_roi_parking_spaces.py  _deprecated_get_roi_parking_spaces.py  car_counter.py  car_parking_space.py  suspicious_car_detector.py  wrong_parking_advanced.py  wrong_parking_basic.py
SmartParking/neosmart/: __init__.py  config.py  logging_setup.py
SmartParking/neosmart/eval/: __init__.py  compare.py  latency.py  threshold_sweep.py
SmartParking/neosmart/tracking/: __init__.py  sort.py
SmartParking/web_app/: barrier_controller.py  barrier_db.py  detector.py  main.py  plate_scanner.py  sort.py
SmartParking/web_app/data/: seed_plates.json
SmartParking/web_app/static/css/: styles.css
SmartParking/web_app/static/js/: app.js
SmartParking/web_app/templates/: index.html
Training/: DataCollectionFromYolo.py  SplitData.py  TrainYolo.py  YoloVocChecker.py  promote_best.py  run_experiments.py  train.py
Validation/: evaluate.py  validation.py  validation_results.json
Validation/data2/: data.yaml
Validation/data2/test/labels/: -0FB0E465-1451-4618-84CD-1A1A88293B08-png_jpg.rf.e7e3b211bcedcac2173cd91d2bca5384.txt  -41421EB3-10E7-4E8B-9D22-424751A9FE8A-png_jpg.rf.6eb8cc84412b7505a3be75668b07b25d.txt  -4B741C2C-6B83-4220-B69F-FCD31BA7BD93-png_jpg.rf.9d1b53e1b65b77c80d569c266b57a88a.txt  -531F16FE-7468-484D-8B14-D5229D4851B8-png_jpg.rf.b129e9e4ab9159a5f1524686d684febb.txt  -5A06964D-6D40-4132-A769-F21A3B8E1DAA-png_jpg.rf.e2af1930f2ad5a2a8c86ab33167e5451.txt  -B3FF9CBC-6C9F-4BDD-B814-790723E32E98-png_jpg.rf.2b2d4f773ea51c6bd1723bf4ab92a5b0.txt  -B59BC424-0AB7-4880-82A8-54AC24CC8C85-png_jpg.rf.048ea284843d7bc156a7a71f213850fc.txt  -C2D8DECE-2C51-4217-9B45-88F76CBC1D6C-png_jpg.rf.52b4ca7c336d80a058618b67636fb7d0.txt  youtube-44_jpg.rf.0b36664709f39621c10135db44fdb1bd.txt  (+3 more)
config/: default.yaml  development.yaml  training.yaml
config/experiments/: 01_baseline.yaml  02_aug_mosaic_mixup.yaml  02_aug_schedule.yaml  03_full_stack.yaml  03_lr_schedule.yaml  04_optimizer_adamw.yaml  05_regularization.yaml  06_final_best.yaml
notebooks/: 01_eda.py  build_ipynb.py
tests/: conftest.py  test_api_smoke.py  test_barrier_db.py  test_barrier_state_machine.py  test_config.py  test_sort.py  test_wrong_parking.py
(+883 files in other folders)
